# lostower

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  README.md
src/: main.rs
src/app/: mod.rs  settings.rs  state.rs
src/book/: content.rs  mod.rs  parser.rs
src/book/formats/: epub.rs  mobi.rs  mod.rs  txt.rs
src/tui/: event.rs  mod.rs
src/tui/components/: mod.rs  scrollbar.rs  status_bar.rs
src/tui/ui/: bookmarks.rs  help.rs  library.rs  mod.rs  reader.rs
src/utils/: path.rs
