[package]
name = "lostower"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.27.0"
anyhow = "1.0"
thiserror = "1.0"
encoding_rs = "0.8.35"
epub = "2.0"
html2text = "0.14"
zip = "0.6"
xml = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"

